<resources>
    <string name="app_name">Muse.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_enterPhoneNumb">Nhập tên tài khoản:</string>
    <string name="login_accountName">Tên tài khoản</string>
    <string name="login_enterPwd">Nhập mật khẩu:</string>
    <string name="login_login">Đăng nhập</string>
    <string name="login_otherWays">Hoặc đăng nhập bằng:</string>
    <string name="login_gg">Google</string>
    <string name="login_Fb">Facebook</string>
    <string name="login_forgotFwd">Quên mật khẩu</string>
    <string name="login_noAcc">Bạn chưa có tài khoản?</string>
    <string name="login_regis">Đăng ký</string>

    <string name="main_list">Danh mục sản phẩm</string>
    <string name="main_recmd">Gợi ý cho bạn</string>

    <string name="regis_enterInfo">Vui lòng nhập thông tin đăng ký</string>
    <string name="regis_enterName">Nhập tên tài khoản:</string>
    <string name="regis_enterPwd">Nhập mật khẩu</string>
    <string name="regis_reEnterPwd">Nhập lại mật khẩu</string>
    <string name="regis_regis">Đăng ký</string>
    <string name="regis_other">Hoặc đăng nhập bằng:</string>
    <string name="regis_GG">Google</string>
    <string name="regis_FB">Facebook</string>
    <string name="regis_hvAcc">Bạn đã có tài khoản?</string>
    <string name="regis_login">Đăng nhập</string>

    <string name="news_news">BẢNG TIN</string>
    <string name="notify_notify">THÔNG BÁO</string>
    <string name="thongbao">Cảm ơn bạn đã mua hàng của Muse. Xin gửi bạn Voucher giảm giá 20% cho lân mua tiếp theo.\nMã giảm giá: KH123456</string>
    <string name="news_xmas">KHUYÊN MÃI GIÁNG SINH</string>
    <string name="news_xmaxInfo">Trong thời trang có một khái niệm tưởng chừng như nghịch lý “càng ít thì càng nhiều (less is more)”. Tuy nhiên</string>
    <string name="pd_find">Tìm kiếm </string>
    <string name="pd_name">Áo khoác 1</string>
    <string name="pd_price">200.000</string>
    <string name="pd_descrip">Mô tả chi tiết về sản phẩm</string>
    <string name="pd_info">Áo khoác kaki với chất vải sang xịn mịn</string>
    <string name="pd_add">Thêm vào giỏ hàng</string>
    <string name="pd_top">ÁO</string>
    <string name="pd_dress">ĐẦM</string>
    <string name="pd_other">CÁC SẢN PHẨM KHÁC</string>
    <string name="pd_accessories">PHỤ KIỆN</string>
    <string name="pd_pants">QUẦN</string>
    <string name="pd_skirt">VÁY</string>

    <string name="chinhsach">Chính sách đổi trả hàng</string>
    <string name="cachinhthuc">Các hình thức thanh toán trực tuyến</string>
    <string name="trangthai">Trạng thái đơn hàng</string>

    <string name="content_chinhsach">1. Sản phẩm có thể đươc đổi trong vòng 30 ngày kể từ ngày mua hàng được in trên biên lai. Sản phẩm đã mua chỉ có thể được đổi sang sản phẩm khác với giá bán bằng hoặc cao hơn sản phẩm đã mua. Trong trường hợp sản phẩm đổi sang có giá cao hơn, khách hàng sẽ thanh toán phần phí chênh lệch. \n 2. Có đầy đủ bản gốc biên lai mua hàng. \n 3. Sản phẩm phải còn mới và nguyên tình trạng ban đầu (không dơ, chưa mặc, chưa qua sử dụng, không sờn rách, chưa qua chỉnh sửa, chưa giặt), với đầy đủ nhãn giá, nhãn sản phẩm và tất cả các nhãn khác được đính kèm sản phẩm (nếu có).
\n4. Chưa qua bất kì chỉnh sửa nào.
\n5. Các sản phẩm đồ lót, tất vớ, legging, đồ bơi, khẩu trang, các sản phẩm dành cho trẻ được đóng gói, hoặc các sản phẩm tuân theo chính sách vệ sinh đã được mở bao bì sẽ không được chấp nhận đổi.
\n6. Chỉ chấp nhận đổi sang sản phẩm khác, không chấp nhận hoàn trả đối với các sản phẩm thông thường không phát sinh lỗi do nhà sản xuất.</string>
    <string name="content_hinhthuc">Các hình thức thanh toán của Muse: \n1.Thanh toán khi nhận hàng (Ship COD)
    \n2.Thanh toán qua thẻ ngân hàng
    \n3.Thanh toán qua ví điện tử</string>
    <string name="content_trangthai">Bạn có thể kiểm tra trạng thái đơn hàng bạn đã đặt trong mục tài khoản -> Đơn hàng</string>
    <string name="mess_ques2">Tôi có thắc mắc về kích thước sản phẩm?</string>
    <string name="mess_ques1">Xin chào bạn, bạn có cần tư vấn?</string>
    <string name="facebook_app_id">1033930550488546</string>
    <string name="fb_login_protocol_scheme">fb1033930550488546</string>
    <string name="ord_title">ĐẶT HÀNG</string>
    <string name="ord_jacket">Áo khoác tweed</string>
    <string name="ord_400">400.000 VND</string>
    <string name="ord_addr">Địa chỉ giao hàng:</string>
    <string name="ord_info">Nguyễn Văn A, (84+) 376 576 788</string>
    <string name="ord_info1">45 Hùng Vương, phường 12, quận 5, TP.HCM</string>
    <string name="ord_deli">Phương thức vận chuyển</string>
    <string name="ord_GHN">Vận chuyển nhanh</string>
    <string name="ord_pay">Phương thức thanh toán</string>
    <string name="ord_vdt">Thanh toán bằng ví điện tử</string>
    <string name="ord_tong">Tổng tiền hàng:</string>
    <string name="ord_800">800.000 VND</string>
    <string name="ord_delifee">Tổng tiền phí vận chuyển</string>
    <string name="ord_35">35.000 VND</string>
    <string name="ord_total">835.000 VND</string>
    <string name="login_title">ĐĂNG NHẬP</string>
    <string name="login_user">Tên tài khoản:</string>
    <string name="login_nmk">Nhập mật khẩu mơi</string>
    <string name="login_nlmk">Nhập lại mật khẩu mơi</string>
    <string name="login_confirm">XÁC Nhận</string>
    <string name="login_continue">TIẾP TỤC</string>
    <string name="login_vuilong">Vui lòng nhập tên tài khoản</string>
    <string name="pay_title">PHƯƠNG THỨC THANH TOÁN</string>
    <string name="pay_ways">Phương thức thanh toán:</string>
    <string name="payCOD">Thanh toán khi nhận hàng (COD)</string>
    <string name="pay_fee">Phí thu hộ: 0đ</string>
    <string name="pay_ewallet">Ví điện tử</string>
    <string name="pay_cart">Thẻ tín dụng</string>
    <string name="pay_yes">ĐỒNG Ý</string>
    <string name="deli_title">PHƯƠNG THỨC VẬN CHUYỂN</string>
    <string name="deli_ways">Phương thức vận chuyển:</string>
    <string name="deli_ghn">Vận chuyển nhanh 35.000 VND</string>
    <string name="deli_date1">Nhận hàng vào ngày 3/11 - 9/11</string>
    <string name="deli_ghtk">Giao hàng tiết kiệm 15.000 VND</string>
    <string name="deli_date2">Nhận hàng vào ngày 3/11 - 10/11</string>
    <string name="chk_title">ĐANG XỬ LÝ</string>
    <string name="chk_total">Tổng tiền hàng:</string>
    <string name="chk_0d">0đ</string>
    <string name="chk_totaldeli">Tổng phí vận chuyển:</string>
    <string name="chk_total_all">Tổng đơn hàng:</string>
    <string name="chk_conti">TIẾP TỤC MUA HÀNG</string>
    <string name="mes_hot">Hotline</string>
    <string name="mes_0779721054">0779721054</string>
    <string name="mes_d1">Di động 1</string>
    <string name="mes_0901103073">0901103073</string>
    <string name="mes_d2">Di động 2</string>
    <string name="mes_0939677440">0939677440</string>
    <string name="acc_title">TÀI KHOẢN</string>
    <string name="acc_nhom11">Nhóm 11 - TMDĐ</string>
    <string name="acc_sdt">(84+) 376 576 788</string>
    <string name="acc_qly">Quản lý đơn hàng</string>
    <string name="acc_save">Lưu bài viết</string>
    <string name="acc_fl">Theo dõi chúng tôi</string>
    <string name="acc_set1">Cài đặt chung</string>
    <string name="acc_out">Đăng xuất</string>
    <string name="acc_cdc">CÀI ĐẶT CHUNG</string>
    <string name="acc_nn">Ngôn ngữ</string>
    <string name="acc_TV">Tiếng Việt</string>
    <string name="acc_noti">Nhận thông báo</string>
    <string name="acc_address">ĐỊA CHỈ NHẬN HÀNG</string>
    <string name="acc_them">Thêm địa chỉ mới</string>
    <string name="acc_n11">Nhóm 11- 0862xxxxxx</string>
    <string name="acc_dchi">thôn A, xã B, huyện C, tỉnh D</string>
    <string name="acc_dcmd">Địa chỉ mặc định</string>
    <string name="pd_aokhoac">Áo khoác vải tweed</string>
    <string name="pd_200">200.000</string>
    <string name="acc_bst">Bộ sưu tập thu đông 2021</string>
    <string name="acc_saved">BÀI VIẾT ĐÃ LƯU</string>
    <string name="acc_trend">Xu hướng thời trang</string>
    <string name="acc_mix"><![CDATA[Mix & Match]]></string>
    <string name="acc_beauty">Tips làm đẹp</string>
    <string name="acc_makeuo">Tips trang điểm</string>
    <string name="acc_skincare">Chăm sóc da</string>
    <string name="acc_mini">Minimalism trong thời trang</string>
    <string name="acc_blazer">Phối đồ với blazer</string>
    <string name="acc_pant">Hack dáng với quần ống rộng</string>
    <string name="acc_xmas">Khuyến mãi Giáng sinh</string>
    <string name="acc_voucher">Tặng Voucher</string>
    <string name="acc_follow">THEO DÕI CHÚNG TÔI</string>
    <string name="acc_ins">Instagram</string>
    <string name="acc_moff">museofficial</string>
    <string name="acc_theodoi">Theo dõi</string>
    <string name="acc_yt">Youtube</string>
    <string name="acc_muse1">Muse_official</string>
    <string name="acc_tik">Tiktok</string>
    <string name="acc_muse">MUSE</string>
    <string name="acc_fb">Facebook</string>
    <string name="acc_ttcn">THÔNG TIN CÁ NHÂN</string>
    <string name="acc_name">Họ tên</string>
    <string name="acc_mail">Địa chỉ email</string>
    <string name="acc_user">Tài khoản đăng nhập</string>
    <string name="acc_date">Ngày sinh</string>
    <string name="acc_dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="acc_sex">Giới tính</string>
    <string name="acc_fem">Nữ</string>
    <string name="acc_male">Nam</string>
    <string name="acc_diachi">Địa chỉ</string>
    <string name="acc_update">CẬP NHẬT</string>

</resources>