<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/hongtrang"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/imvClear"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_250sdp"
        android:src="@drawable/ic_baseline_clear"/>

    <ImageView
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_2sdp"
        android:src="@drawable/ic_logo_fn_01"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/xanhdam"
        android:text="@string/login_enterPhoneNumb"
        android:textSize="22sp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_10sdp"/>


    <EditText
        android:id="@+id/edtusername1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_accountName"
        android:textColor="@color/xanhdam"
        android:textSize="20sp"
        android:padding="@dimen/_5sdp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/xanhdam"
        android:text="@string/login_enterPwd"
        android:textSize="22sp"
        android:padding="@dimen/_5sdp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_enterPwd"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:textColor="@color/xanhdam"
            android:padding="@dimen/_5sdp"
            android:drawableEnd="@drawable/ic_baseline_chematkhau"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnDangNhap"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="50dp"
        android:text="@string/login_login"
        android:textSize="20sp"
        android:textColor="#733236"
        android:background="@drawable/custom_button"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:backgroundTint="#B49088"/>
    <TextView
        android:layout_marginTop="@dimen/_15sdp"
        android:id="@+id/txtHoacDN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_otherWays"
        android:textSize="20sp"
        android:textColor="@color/xanhdam"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        >

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dodam"
            android:text="@string/login_gg"
            android:drawableLeft="@drawable/ic_google"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnFacebook"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/ic_facebook"
            android:backgroundTint="@color/xanh"
            android:text="@string/login_Fb"
            android:background="@drawable/custom_button"
            android:layout_marginStart="20dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </LinearLayout>
    <TextView
        android:id="@+id/txtQuenmk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forgotFwd"
        android:textColor="@color/xanhdam"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_5sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_noAcc"
            android:textSize="20sp"
            android:textColor="@color/xanhdam"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_30sdp"/>
        <TextView
            android:id="@+id/txtDangky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_regis"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_5sdp"
            />

    </LinearLayout>




</LinearLayout>