<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:background="@color/hongtrang"
    android:padding="5dp">
    <ImageView
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/ic_logo_fn_01"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regis_enterInfo"
        android:textSize="20sp"
        android:textStyle="bold"/>



    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/txNhapsdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regis_enterName"
        android:textSize="20sp"
        android:textColor="@color/xanhdam"/>
    <EditText
        android:id="@+id/edtusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#40465B"
        android:hint="@string/regis_enterName"
        android:textSize="20sp" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/edtMatKhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtusername"
            android:layout_marginTop="10dp"
            android:hint="@string/regis_enterPwd"
            android:drawableEnd="@drawable/ic_baseline_chematkhau"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:textColor="@color/xanhdam"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/edtNhapLaiMatKhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/regis_reEnterPwd"
            android:layout_below="@id/edtMatKhau"
            android:drawableEnd="@drawable/ic_baseline_chematkhau"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:textColor="@color/xanhdam"
            android:layout_marginTop="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnDangKy"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="50dp"
        android:text="@string/regis_regis"
        android:textSize="20sp"
        android:textColor="@color/dodam"
        android:background="@drawable/custom_button"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/hongpastel"/>
    <TextView
        android:padding="@dimen/_15sdp"
        android:id="@+id/txtHoacDN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regis_other"
        android:textSize="20sp"
        android:textColor="#40465B"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="50dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="@color/dodam"
            android:drawableLeft="@drawable/ic_google"
            android:text="@string/regis_GG"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnFacebook"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/ic_facebook"
            android:backgroundTint="@color/xanh"
            android:text="@string/regis_FB"
            android:background="@drawable/custom_button"
            android:layout_marginStart="20dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtCoTK"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnGoogle"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/regis_hvAcc"
            android:textColor="@color/xanhdam"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/txtDangNhap"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/regis_login"
            android:textColor="@color/black"
            android:textSize="20sp"/>
    </LinearLayout>
</LinearLayout>
