<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_vanchuyen"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnBackDathang"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/ic_baseline_arrow_back_1" />

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/deli_title"
            android:textAlignment="center"
            android:textColor="@color/xanhdam"
            android:textSize="20dp"
            android:textStyle="bold" />


    </androidx.appcompat.widget.Toolbar>

    <Toolbar
        android:id="@+id/line_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_vanchuyen"
        >

        <View
            android:layout_width="380dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@android:color/black"/>
    </Toolbar>
    <TextView
        android:id="@+id/txtPTVC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deli_ways"
        android:textSize="20sp"
        android:textColor="@color/xanhdam"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/line_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"/>
    <RadioGroup
        android:id="@+id/rg_PTVC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/txtPTVC"
        >
        <RadioButton
            android:id="@+id/rd_VCN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deli_ghn"
            android:textColor="@color/xanhdam"
            android:textStyle="bold"
            android:textSize="18sp"
            android:checked="true"
            android:padding="18dp"
            >

        </RadioButton>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/deli_date1"
            android:layout_marginStart="55dp"
            android:textColor="@color/xanh"
            android:textSize="18sp"/>
        <RadioButton
            android:id="@+id/rd_GHTK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deli_ghtk"
            android:textStyle="bold"
            android:textColor="@color/xanhdam"
            android:textSize="18sp"
            android:checked="false"
            android:padding="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/deli_date2"
            android:layout_marginStart="55dp"
            android:textColor="@color/xanh"
            android:textSize="18sp"/>



    </RadioGroup>

    <Button
        android:id="@+id/btnVanchuyen"
        android:layout_width="173dp"
        android:layout_height="46dp"
        android:background="@drawable/custom_buton_corner"
        android:textSize="20sp"
        android:text="@string/pay_yes"
        android:textAllCaps="false"
        android:textStyle="normal"
        android:textColor="@color/xam"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>